@@ -28,6 +28,7 @@
   the other way around).
 * Fix some crashes when deleting files that don't exist.
 * Fix adding individual tracks in BPD.
+* Fix crash when ~/.beetsconfig does not exist.
 
 1.0b7
 -----
